--- a/Spring4AngularWeb/pom.xml
+++ b/Spring4AngularWeb/pom.xml
@@ -83,6 +83,11 @@
             <version>3.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.1.4.RELEASE</version>
+        </dependency>
         <!-- jstl for jsp page -->
         <dependency>
             <groupId>jstl</groupId>
