--- a/Spring4AngularWeb/pom.xml
+++ b/Spring4AngularWeb/pom.xml
@@ -40,7 +40,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.176</version>
+        </dependency>
         <dependency>
             <groupId>hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
@@ -133,7 +137,20 @@
             <version>4.1.0.RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <!--https://github.com/isrsal/spring-mvc-logger-->
+        <dependency>
+            <groupId>com.github.isrsal</groupId>
+            <artifactId>spring-mvc-logger</artifactId>
+            <version>0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <finalName>${artifactId}-${version}-SNAP</finalName>
